# MuIC-

./: CMakeLists.txt  MuIC Data.ipynb
include/muic/actions/: EventAction.h
include/muic/analysis/: EnergyDepositCollector.h  NtupleMaker.h
macros/macros/: run_vanilla_gps.mac  vis.mac
macros/macros/macros/: run.mac  run_vanilla_gps.mac
src/muic/actions/: EventAction.cpp  SteppingAction.cpp
src/muic/analysis/: EnergyDepositCollector.cpp  GenParticleCollector.cpp  NtupleMaker.cpp
src/muic/detector/: World.cpp
src/muic/setup/: DetectorConstruction.cpp
